--- a/adduser.html
+++ b/adduser.html
@@ -83,7 +83,7 @@ input[type=submit]:hover {
 
 <h2 class="text-center">Product FORM</h2>
 <p class="text-center">Đăng ký giải 2v2 Discord</p>
-<p>link to discord </p>
+<p class="text-center">Link tham gia discord <a href="https://discord.gg/ygBdAqay"></a></p>
 <div class="container">
   <form action="https://dangkygiaidau.herokuapp.com/dangky/" method="post" enctype='multipart/form-data'>
   <div class="row">
