--- a/home.html
+++ b/home.html
@@ -56,7 +56,11 @@
         
                 <h1 class="my-4">Giải đấu 2v2</h1>     
               <!-- /.col-lg-3 -->
+              <div class="list-group">
+                <a href="/dangky" class="list-group-item">Đăng ký giải đấu</a>
+              </div>
 
+            </div>
               <div class="col-lg-9" id="" >
                 <div class="row1">
                     <h2>Product FORM </h2>
