--- a/home.html
+++ b/home.html
@@ -59,11 +59,13 @@
               <div class="list-group">
                 <a href="/dangky" class="list-group-item">Đăng ký giải đấu</a>
               </div>
-
+              <div class="list-group">
+                <a href="/luat" class="list-group-item">Luật</a>
+              </div>
             </div>
               <div class="col-lg-9" id="" >
                 <div class="row1">
-                    <h2>Product FORM </h2>
+                    <h2>danh sách người đã đăng kí</h2>
                     <table class="table" style="width:100%" >
                       <thead class="thead-dark">
                     <tr>
