--- a/home.html
+++ b/home.html
@@ -62,6 +62,15 @@
               <div class="list-group">
                 <a href="/luat" class="list-group-item">Luật</a>
               </div>
+              <div class="list-group">
+                <a href="/thongtin" class="list-group-item">Thông Tin</a>
+              </div>
+              <div class="list-group">
+                <a href="/bangdau" class="list-group-item">Bảng Đấu</a>
+              </div>
+              <div class="list-group">
+                <a href="/giaithuong" class="list-group-item">Giải Thưởng</a>
+              </div>
             </div>
               <div class="col-lg-9" id="" >
                 <div class="row1">
