--- a/thongtin.html
+++ b/thongtin.html
@@ -1,3 +1,13 @@
+<style>
+body{
+    background-image: url("https://cdn.wallpapersafari.com/74/61/YrFpu1.png");
+}
+.content{
+    width: 80%;
+    padding-left:100px;
+
+}
+</style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,11 +18,15 @@
 </head>
 <body>
     <h1 style="text-align: center">Giải đấu 2v2 shindo life</h1>
-    <h1>thời gian bắt đầu đăng ký (10/3/2022 - 19/3/2022</h1>
-    <h1>thời gian bắt đầu thi đấu (1h ngày 20/3/2022)</h1>
-    <h1>người tham gia sẽ phải đăng kí ở phần <a href="/dangky">đăng ký</a></h1>
-    <h2>hãy đăng kí nếu bạn chắc chắn có thể có mặt vào ngày thi đấu</h2>
-    <h2>tuân thủ các luật, người vi phạm sẽ bị cấm tùy theo mực mà admin đưa ra</h2>
-    <h2>nếu bạn chưa có người để thi đấu cùng thì hay nhắn tin với admin trong group <a href="https://discord.gg/ygBdAqay">discord</a> để đc ghép cặp</h2>
+    <h1><a href="/">về trang chính</a></h1>
+    <div class="content">
+    <h1>Thời gian bắt đầu đăng ký (10/3/2022 - 19/3/2022</h1>
+    <h1>Thời gian bắt đầu thi đấu (1h ngày 20/3/2022)</h1>
+    <h1>Người tham gia sẽ phải đăng kí ở phần <a href="/dangky">Đăng ký</a></h1>
+    <h2>Hãy đăng kí nếu bạn chắc chắn có thể có mặt vào ngày thi đấu</h2>
+    <h2>Tuân thủ các luật, người vi phạm sẽ bị cấm tùy theo mực mà admin đưa ra</h2>
+    <h2>Nếu bạn chưa có người để thi đấu cùng thì hay nhắn tin với admin trong group <a href="https://discord.gg/ygBdAqay">discord</a> để đc ghép cặp</h2>
+    
+</div>
 </body>
 </html>
