--- a/bangdau.html
+++ b/bangdau.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1><a href="/">về trang chính</a></h1>
     <h1>chưa có thông tin bảng đấu vui lòng đợi đến ngày thi đấu để biết</h1>
 </body>
 </html>
