--- a/giaithuong.html
+++ b/giaithuong.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1><a href="/">về trang chính</a></h1>
     <ul class="list-group">
         <li class="list-group-item">
             giải nhất : 300robux ,3 điểm vào role
