--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>shop</title>
+        <title>giải đấu 2v2</title>
         <!-- Favicon-->
         <!-- Core theme CSS (includes Bootstrap)-->
     </head>
