--- a/luat.html
+++ b/luat.html
@@ -40,6 +40,15 @@
         <li class="list-group-item">
             8.không dùng script hoặc phần mềm hack 
         </li>
+        <li class="list-group-item">
+            9.không dùng Shiver c spec
+        </li>
+        <li class="list-group-item">
+            10.không dùng Forged Spam spec
+        </li>
+        <li class="list-group-item">
+            11.không dùng ryuji mode
+        </li>
     </ul>
 </body>
 </html>
