--- a/adduser.html
+++ b/adduser.html
@@ -79,7 +79,12 @@ input[type=submit]:hover {
 </style>
 </head>
 <body>
-
+<script>
+  if(message){
+    alert(message);
+  }
+  
+</script>
 
 <p class="text-center">Đăng ký giải 2v2 Discord</p>
 <h1><a href="/">về trang chính</a></h1>
@@ -132,5 +137,6 @@ input[type=submit]:hover {
   </div>
   </form>
 </body>
+
 </html>
->
+
