--- a/adduser.html
+++ b/adduser.html
@@ -83,7 +83,7 @@ input[type=submit]:hover {
 
 <p class="text-center">Đăng ký giải 2v2 Discord</p>
 <h1><a href="/">về trang chính</a></h1>
-<% if(message){ %>
+<% if(message==""){ %>
   <p style="color:red"><%= message %></p>
   <%} %>
 <p class="text-center">Link tham gia discord <a href="https://discord.gg/ygBdAqay"></a></p>
