--- a/adduser.html
+++ b/adduser.html
@@ -84,9 +84,9 @@ input[type=submit]:hover {
 <p class="text-center">Đăng ký giải 2v2 Discord</p>
 <h1><a href="/">về trang chính</a></h1>
 <% if(message!=""){ %>
-  <p style="color:red"><%= message %></p>
+  <p style="color:red; text-align: center;"><%= message %></p>
   <%} %>
-<p class="text-center">Link tham gia discord <a href="https://discord.gg/ygBdAqay"></a></p>
+<p class="text-center">Link tham gia <a href="https://discord.gg/ygBdAqay">Discord</a></p>
 <div class="container">
   <form action="https://dangkygiaidau.herokuapp.com/dangky/" method="post" enctype='multipart/form-data'>
   <div class="row">
