--- a/adduser.html
+++ b/adduser.html
@@ -81,7 +81,7 @@ input[type=submit]:hover {
 <body>
 
 
-<p class="text-center">Đăng ký giải 2v2 Discord</p>
+<p class="text-center">Đăng ký ao làng 2v2 Discord</p>
 <h1><a href="/">về trang chính</a></h1>
 <% if(message!=""){ %>
   <p style="color:red; text-align: center;"><%= message %></p>
