--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>giải đấu 2v2</title>
+        <title>Ao làng 2v2</title>
         <!-- Favicon-->
         <!-- Core theme CSS (includes Bootstrap)-->
     </head>
@@ -54,10 +54,10 @@
         
               <div class="col-lg-3">
         
-                <h1 class="my-4">Giải đấu 2v2</h1>     
+                <h1 class="my-4">Ao làng 2v2</h1>     
               <!-- /.col-lg-3 -->
               <div class="list-group">
-                <a href="/dangky" class="list-group-item">Đăng ký giải đấu</a>
+                <a href="/dangky" class="list-group-item">Đăng ký ao làng</a>
               </div>
               <div class="list-group">
                 <a href="/luat" class="list-group-item">Luật</a>
