--- a/thongtin.html
+++ b/thongtin.html
@@ -17,7 +17,7 @@ body{
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align: center">Giải đấu 2v2 shindo life</h1>
+    <h1 style="text-align: center">Ao làng 2v2 shindo life</h1>
     <h1><a href="/">về trang chính</a></h1>
     <div class="content">
     <h1>Thời gian bắt đầu đăng ký (10/3/2022 - 19/3/2022</h1>
