--- a/giaithuong.html
+++ b/giaithuong.html
@@ -1,3 +1,8 @@
+<style>
+    body{
+        background-image: url("https://image.shutterstock.com/z/stock-vector-stage-podium-with-lighting-stage-podium-scene-with-for-award-ceremony-on-blue-background-vector-1399092206.jpg");
+    }
+</style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
