--- a/giaithuong.html
+++ b/giaithuong.html
@@ -2,6 +2,21 @@
     body{
         background-image: url("https://image.shutterstock.com/z/stock-vector-stage-podium-with-lighting-stage-podium-scene-with-for-award-ceremony-on-blue-background-vector-1399092206.jpg");
     }
+    .nhat{
+        position: relative;
+        left:38%;
+        top:350px
+    }
+    .nhi{
+        position: relative;
+        left:11%;
+        top:420px
+    }
+    .thamgia{
+        position: relative;
+        left:65%;
+        top:420px
+    }
 </style>
 <!DOCTYPE html>
 <html lang="en">
@@ -14,14 +29,14 @@
 <body>
     <h1><a href="/">về trang chính</a></h1>
     <ul class="list-group">
-        <li class="list-group-item">
-            giải nhất : 300robux ,3 điểm vào role
+        <li class="list-group-item nhat">
+            <h3>giải nhất : 300robux ,3 điểm vào role</h1>
         </li>
-        <li class="list-group-item">
-            Giải nhì : 150robux ,2 điểm vào role
+        <li class="list-group-item nhi">
+            <h3>Giải nhì : 150robux ,2 điểm vào role</h3>
         </li>
-        <li class="list-group-item">
-            Người tham gia + 1 điểm vào role
+        <li class="list-group-item thamgia">
+            <h3>Người tham gia + 1 điểm vào role</h3>
         </li>
     </ul>
 </body>
