--- a/adduser.html
+++ b/adduser.html
@@ -81,7 +81,7 @@ input[type=submit]:hover {
 <body>
 
 
-<p class="text-center">Đăng ký ao làng 2v2 Discord</p>
+<p class="text-center">Đăng ký ao làng Discord</p>
 <h1><a href="/">về trang chính</a></h1>
 <% if(message!=""){ %>
   <p style="color:red; text-align: center;"><%= message %></p>
@@ -103,14 +103,6 @@ input[type=submit]:hover {
     </div>
     <div class="col-75">
       <input type="text" id="dname" name="dname" value="" placeholder="Discord name..">
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-25">
-      <label for="pname">Team member name(có thể có hoặc không, nếu không có sẽ được ghép đội ngẫu nhiên)</label>
-    </div>
-    <div class="col-75">
-      <input type="text" id="member" name="member" value="" placeholder="Roblox_name,Discord_Name">
     </div>
   </div>
   <div class="row">
