--- a/luat.html
+++ b/luat.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,6 +49,12 @@
         </li>
         <li class="list-group-item">
             11.không dùng ryuji mode
+        </li>
+        <li class="list-group-item">
+            12.cấm minakaze mode
+        </li>
+        <li class="list-group-item">
+            13.cấm tentacion mode
         </li>
     </ul>
 </body>
