--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Ao làng 2v2</title>
+        <title>Ao làng</title>
         <!-- Favicon-->
         <!-- Core theme CSS (includes Bootstrap)-->
     </head>
@@ -54,7 +54,7 @@
         
               <div class="col-lg-3">
         
-                <h1 class="my-4"> Ao làng 2v2</h1>     
+                <h1 class="my-4"> Ao làng </h1>     
               <!-- /.col-lg-3 -->
               <div class="list-group">
                 <a href="/dangky" class="list-group-item">Đăng ký ao làng</a>
