--- a/thongtin.html
+++ b/thongtin.html
@@ -25,7 +25,7 @@ body{
     <h1>Người tham gia sẽ phải đăng kí ở phần <a href="/dangky">Đăng ký</a></h1>
     <h2>Hãy đăng kí nếu bạn chắc chắn có thể có mặt vào ngày thi đấu</h2>
     <h2>Tuân thủ các luật, người vi phạm sẽ bị cấm tùy theo mực mà admin đưa ra</h2>
-    <h2>Nếu bạn chưa có người để thi đấu cùng thì hay nhắn tin với admin trong group <a href="https://discord.gg/ygBdAqay">discord</a> để đc ghép cặp</h2>
+    <h2>Nếu cần hỗ trợ thì tham gia vào <a href="https://discord.gg/ygBdAqay">discord</a> và nhắn tin với admin để được hỗ trợ</h2>
 </div>
 </body>
 </html>
