--- a/bangdau.html
+++ b/bangdau.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1><a href="/">về trang chính</a></h1>
-    <h1>chưa có thông tin bảng đấu vui lòng đợi đến ngày thi đấu để biết</h1>
+    <img src="/public/giaidau.png" alt="" width="100%">
 </body>
 </html>
