--- a/bangdau.html
+++ b/bangdau.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1><a href="/">về trang chính</a></h1>
-    <img src="/public/giaidau.png" alt="" width="100%">
+    <img src="/public/vongloai.png" alt="" width="100%">
 </body>
 </html>
