--- a/bangdau.html
+++ b/bangdau.html
@@ -1,3 +1,8 @@
+<style>
+    body{
+        background-image: url("/public/vongloai.png");
+    }
+</style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +13,6 @@
 </head>
 <body>
     <h1><a href="/">về trang chính</a></h1>
-    <img src="/public/vongloai.png" alt="" width="100%">
+    <!-- <img src="/public/vongloai.png" alt="" width="100%"> -->
 </body>
 </html>
