--- a/bangdau.html
+++ b/bangdau.html
@@ -1,6 +1,5 @@
 <style>
     body{
-        background-image: url("/public/vongloai.png");
         width:100%
     }
 </style>
@@ -14,6 +13,6 @@
 </head>
 <body>
     <h1><a href="/">về trang chính</a></h1>
-    <!-- <img src="/public/vongloai.png" alt="" width="100%"> -->
+    <img src="/public/vongloai.png" alt="" width="100%">
 </body>
 </html>
